# agenticextraction

./: .dockerignore  .env.docker  .gitignore  DEPLOYMENT_GUIDE.md  Dockerfile.backend  Dockerfile.frontend  conditional letter_v1.docx  diag_passport.py  docker-compose.yml  estimation.xlsx  reproduce_mrz_collision.py  requirements.txt  simulate_full_run.py  simulate_full_run_v2.py  verify_mrz_collision.py  verify_progress_visibility.py  ~$estimation.xlsx
document_analysis_ui/backend/: pyproject.toml  test_sequential.py
document_analysis_ui/backend/app/: __init__.py  celery_app.py  config.py  database.py  main.py  tasks.py
document_analysis_ui/backend/app/models/: __init__.py  api_models.py  progress.py  session.py  user.py
document_analysis_ui/backend/app/routers/: __init__.py  auth.py  documents.py  processing.py  sessions.py
document_analysis_ui/backend/app/services/: __init__.py  auth_service.py  batch_manager.py  file_handler.py  letter_service.py  orchestrator_runner.py  session_manager.py
document_analysis_ui/backend/tests/: __init__.py  test_batch_manager.py  test_sessions.py
education_credential_agent/: .env.example  README.md  pyproject.toml
education_credential_agent/src/education_agent/: __init__.py  main.py
education_credential_agent/src/education_agent/config/: __init__.py  constants.py  settings.py
education_credential_agent/src/education_agent/models/: __init__.py  credential_data.py  document.py  evaluation.py  grade_conversion.py
education_credential_agent/src/education_agent/pipeline/: __init__.py  base.py  orchestrator.py
education_credential_agent/src/education_agent/pipeline/stages/: __init__.py  classifier.py  document_loader.py  evaluator.py  extractor.py  grade_converter.py  ocr_processor.py  semester_validator.py
education_credential_agent/src/education_agent/prompts/: __init__.py  classification.py  extraction.py  system.py
education_credential_agent/src/education_agent/services/: __init__.py  grade_table_service.py  llm_service.py
education_credential_agent/src/education_agent/utils/: __init__.py  exceptions.py  image_utils.py  pdf_utils.py
education_credential_agent/tests/: __init__.py  conftest.py
education_credential_agent/tests/integration/: __init__.py  test_pipeline.py
education_credential_agent/tests/unit/: __init__.py  test_extractor.py  test_grade_conversion.py  test_models.py  test_semester_validator.py
financial_document_agent/: .env.example  .gitignore  README.md  pyproject.toml
financial_document_agent/src/financial_agent/: __init__.py  main.py
financial_document_agent/src/financial_agent/config/: __init__.py  constants.py  settings.py
financial_document_agent/src/financial_agent/models/: __init__.py  document.py  evaluation.py  financial_data.py
financial_document_agent/src/financial_agent/pipeline/: __init__.py  base.py  orchestrator.py
financial_document_agent/src/financial_agent/pipeline/stages/: __init__.py  classifier.py  currency_converter.py  document_loader.py  evaluator.py  extractor.py  ocr_processor.py
financial_document_agent/src/financial_agent/prompts/: __init__.py  classification.py  extraction.py  system.py
financial_document_agent/src/financial_agent/services/: __init__.py  cache.py  exchange_service.py  llm_service.py  ocr_service.py
financial_document_agent/src/financial_agent/utils/: __init__.py  exceptions.py  image_utils.py
financial_document_agent/tests/: __init__.py  conftest.py
financial_document_agent/tests/fixtures/: .gitkeep
financial_document_agent/tests/integration/: __init__.py  test_pipeline.py
financial_document_agent/tests/unit/: __init__.py  test_cache.py  test_models.py  test_ocr_parallel.py  test_services.py  test_utils.py
master_orchestrator_agent/: .env.example  pyproject.toml
master_orchestrator_agent/src/master_orchestrator/: __init__.py  main.py
master_orchestrator_agent/src/master_orchestrator/adapters/: __init__.py  education_adapter.py  financial_adapter.py  passport_adapter.py
master_orchestrator_agent/src/master_orchestrator/config/: __init__.py  constants.py  settings.py
master_orchestrator_agent/src/master_orchestrator/models/: __init__.py  cross_validation.py  input.py  unified_result.py
master_orchestrator_agent/src/master_orchestrator/pipeline/: __init__.py  base.py  orchestrator.py  progress.py
master_orchestrator_agent/src/master_orchestrator/prompts/: __init__.py  classification.txt
master_orchestrator_agent/src/master_orchestrator/services/: __init__.py  excel_service.py  llm_service.py
master_orchestrator_agent/src/master_orchestrator/utils/: __init__.py  exceptions.py  fuzzy_match.py
master_orchestrator_agent/tests/: __init__.py  conftest.py
master_orchestrator_agent/tests/integration/: __init__.py  test_orchestrator.py  test_parallel_dispatch.py
master_orchestrator_agent/tests/unit/: __init__.py  test_fuzzy_match.py  test_models.py  test_stages.py
passport_analysis_agent/: .env.example  README.md  pyproject.toml
passport_analysis_agent/src/passport_agent/: __init__.py  __main__.py  main.py
passport_analysis_agent/src/passport_agent/config/: __init__.py  constants.py  settings.py
passport_analysis_agent/src/passport_agent/models/: __init__.py  document.py  mrz.py  passport_data.py  result.py  validation.py
passport_analysis_agent/src/passport_agent/pipeline/: __init__.py  base.py  orchestrator.py
passport_analysis_agent/src/passport_agent/pipeline/stages/: __init__.py  (+7 more)
passport_analysis_agent/src/passport_agent/prompts/: __init__.py  extraction.py  system.py
passport_analysis_agent/src/passport_agent/services/: __init__.py  llm_service.py  mrz_service.py
passport_analysis_agent/src/passport_agent/utils/: __init__.py  exceptions.py  fuzzy_match.py  image_utils.py  mrz_utils.py  preprocessing.py
passport_analysis_agent/tests/: __init__.py  conftest.py  test_mrz_repair.py
passport_analysis_agent/tests/integration/: __init__.py  test_pipeline.py
passport_analysis_agent/tests/unit/: __init__.py  test_fuzzy_match.py  test_models.py  test_mrz_service.py  test_mrz_utils.py  test_scoring.py
(+60 files in other folders)
