[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "education-credential-agent"
version = "0.1.0"
description = "Education credential evaluation agent using Claude AI"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Education Agent Team" }
]
keywords = ["education", "credentials", "ai", "claude", "evaluation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "pypdfium2>=4.30.0",
    "Pillow>=10.4.0",
    "httpx>=0.27.0",
    "tenacity>=9.0.0",
    "structlog>=24.4.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[project.scripts]
education-agent = "education_agent.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/education_agent"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
