[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "master-orchestrator-agent"
version = "0.1.0"
description = "Master Document Orchestrator Agent - Routes documents to specialized sub-agents and generates unified analysis"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "structlog>=24.4.0",
    "openpyxl>=3.1.0",
    "rapidfuzz>=3.0.0",
    "pypdfium2>=4.0.0",
    "Pillow>=10.0.0",
    "tenacity>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-Pillow>=10.0.0",
]
# Note: Sub-agents must be installed separately in development:
# pip install -e ../financial_document_agent
# pip install -e ../education_credential_agent
# pip install -e ../passport_analysis_agent

[project.scripts]
master-orchestrator = "master_orchestrator.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
master_orchestrator = ["prompts/*.txt", "prompts/*.json"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
